Updated way to build image to use slim debian - now image size is 287MB and start time 0.4sec. While it doesn't work properly (answers only on /health).